--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+
+    <link rel="stylesheet" href="theme/css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="theme/css/animate.css">
+    <link rel="stylesheet" href="theme/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="theme/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="theme/css/magnific-popup.css">
+    <link rel="stylesheet" href="theme/css/aos.css">
+    <link rel="stylesheet" href="theme/css/ionicons.min.css">
+    <link rel="stylesheet" href="theme/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="theme/css/jquery.timepicker.css">
+    <link rel="stylesheet" href="theme/css/flaticon.css">
+    <link rel="stylesheet" href="theme/css/icomoon.css">
+    <link rel="stylesheet" href="theme/css/style.css">
+
     <title>Malbay X | Online Clothing Store</title>
 </head>
 <body>
