--- a/public/index.html
+++ b/public/index.html
@@ -48,4 +48,32 @@
 <div id="root"></div>
 
 </body>
+<script src="theme/js/jquery.min.js"></script>
+<script src="theme/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="theme/js/popper.min.js"></script>
+<script src="theme/js/bootstrap.min.js"></script>
+<script src="theme/js/jquery.easing.1.3.js"></script>
+<script src="theme/js/jquery.waypoints.min.js"></script>
+<script src="theme/js/jquery.stellar.min.js"></script>
+<script src="theme/js/owl.carousel.min.js"></script>
+<script src="theme/js/jquery.magnific-popup.min.js"></script>
+<script src="theme/js/aos.js"></script>
+<script src="theme/js/jquery.animateNumber.min.js"></script>
+<script src="theme/js/bootstrap-datepicker.js"></script>
+<script src="theme/js/scrollax.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="theme/js/google-map.js"></script>
+<script src="theme/js/main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag("js", new Date());
+
+    gtag("config", "UA-23581568-13");
+</script>
 </html>
