--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,18 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="theme/css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="theme/css/animate.css">
-    <link rel="stylesheet" href="theme/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="theme/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="theme/css/magnific-popup.css">
-    <link rel="stylesheet" href="theme/css/aos.css">
-    <link rel="stylesheet" href="theme/css/ionicons.min.css">
-    <link rel="stylesheet" href="theme/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="theme/css/jquery.timepicker.css">
-    <link rel="stylesheet" href="theme/css/flaticon.css">
-    <link rel="stylesheet" href="theme/css/icomoon.css">
-    <link rel="stylesheet" href="theme/css/style.css">
+    <link rel="stylesheet" href="/theme/css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="/theme/css/animate.css">
+    <link rel="stylesheet" href="/theme/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/theme/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/theme/css/magnific-popup.css">
+    <link rel="stylesheet" href="/theme/css/aos.css">
+    <link rel="stylesheet" href="/theme/css/ionicons.min.css">
+    <link rel="stylesheet" href="/theme/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/theme/css/jquery.timepicker.css">
+    <link rel="stylesheet" href="/theme/css/flaticon.css">
+    <link rel="stylesheet" href="/theme/css/icomoon.css">
+    <link rel="stylesheet" href="/theme/css/style.css">
 
     <title>Malbay X | Online Clothing Store</title>
 </head>
@@ -48,22 +48,22 @@
 <div id="root"></div>
 
 </body>
-<script src="theme/js/jquery.min.js"></script>
-<script src="theme/js/jquery-migrate-3.0.1.min.js"></script>
-<script src="theme/js/popper.min.js"></script>
-<script src="theme/js/bootstrap.min.js"></script>
-<script src="theme/js/jquery.easing.1.3.js"></script>
-<script src="theme/js/jquery.waypoints.min.js"></script>
-<script src="theme/js/jquery.stellar.min.js"></script>
-<script src="theme/js/owl.carousel.min.js"></script>
-<script src="theme/js/jquery.magnific-popup.min.js"></script>
-<script src="theme/js/aos.js"></script>
-<script src="theme/js/jquery.animateNumber.min.js"></script>
-<script src="theme/js/bootstrap-datepicker.js"></script>
-<script src="theme/js/scrollax.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="/theme/js/popper.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/jquery.easing.1.3.js"></script>
+<script src="/theme/js/jquery.waypoints.min.js"></script>
+<script src="/theme/js/jquery.stellar.min.js"></script>
+<script src="/theme/js/owl.carousel.min.js"></script>
+<script src="/theme/js/jquery.magnific-popup.min.js"></script>
+<script src="/theme/js/aos.js"></script>
+<script src="/theme/js/jquery.animateNumber.min.js"></script>
+<script src="/theme/js/bootstrap-datepicker.js"></script>
+<script src="/theme/js/scrollax.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="theme/js/google-map.js"></script>
-<script src="theme/js/main.js"></script>
+<script src="/theme/js/google-map.js"></script>
+<script src="/theme/js/main.js"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
